# lightning-trader

./: .gitignore  LICENSE  README.en.md  README.md
api/ctp_6.6.8_t1/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  thostmduserapi_se.lib  thosttraderapi_se.lib
api/v6.6.9_traderapi_20220920/: v6.6.9_20220914_traderapi升级说明.txt
api/v6.6.9_traderapi_20220920/v6.6.9_20220914_api_linux64/: error.xml
api/v6.6.9_traderapi_20220920/v6.6.9_20220914_winApi/traderapi/20220914_traderapi64_se_windows/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
doc/: LingningTrader架构图.docx
src/: CMakeLists.txt  CMakePresets.json
src/core/: CMakeLists.txt  bar_generator.cpp  bar_generator.h  context.cpp  context.h  csv_recorder.cpp  csv_recorder.h  delayed_distributor.cpp  delayed_distributor.h  evaluate.cpp  evaluate.h  lightning.cpp  log_wapper.cpp  pod_chain.cpp  pod_chain.h  runtime.cpp  runtime.h  trading_section.cpp  trading_section.h
src/example/: CMakeLists.txt  example.cpp  example.h
src/framework/: CMakeLists.txt  engine.cpp  evaluate_engine.cpp  runtime_engine.cpp  strategy.cpp
src/include/: data_types.hpp  define.h  engine.h  evaluate_engine.h  lightning.h  notify.h  receiver.h  runtime_engine.h  strategy.h
src/market/: CMakeLists.txt  ctp_market.cpp  ctp_market.h  interface.cpp
src/share/: cpu_helper.hpp  event_center.hpp  file_wapper.hpp  interface.h  market_api.h  rapidcsv.h  spin_mutex.hpp  tick_loader.h  time_utils.hpp  trader_api.h
src/simulator/: CMakeLists.txt  contract_parser.cpp  contract_parser.h  interface.cpp  market_simulator.cpp  market_simulator.h  order_container.cpp  order_container.h  position_container.cpp  position_container.h  trader_simulator.cpp  trader_simulator.h
src/simulator/tick_loader/: csv_tick_loader.cpp  csv_tick_loader.h
src/trader/: CMakeLists.txt  ctp_trader.cpp  ctp_trader.h  interface.cpp
